--- a/Sports Brawl by Lost West Media/LWM_SportsBrawl_1_1.html
+++ b/Sports Brawl by Lost West Media/LWM_SportsBrawl_1_1.html
@@ -1038,8 +1038,8 @@
             						<tr>
             							<td><button type="roll" class="sheet-blank-logo-button" value="&{template:powerup} {{name=@{player_name}'s @{items_name}}}{{Cat=@{itemscat_select}}}{{Type=@{itemstype_select}}}{{Rarity=@{itemsrarity_select}}}{{Details=@{items_details}}}"></button></td>
             							<td><input class="attribute" type="text" value="" name="attr_player_name" /></td>
-            							<td><input class="attribute" type="text" value="" name="attr_items_name" placeholder="Power/Ability Name" accept="Item" /></td>
-            							<td><select class ="sheet-select" name="attr_itemscat_select" value="" style="width:80px" accept="Category">
+            							<td><input class="attribute" type="text" value="" name="attr_items_name" placeholder="Power/Ability Name" accept="Item Name" /></td>
+            							<td><select class ="sheet-select" name="attr_itemscat_select" value="" style="width:80px" accept="Item Category">
             								<option value="Armor">Armor</option>
             								<option value="Consumable">Consumable</option>
             								<option value="Equipment">Equipment</option>
