Update Score Template
Update home and away score template

--- a/Sports Brawl by Lost West Media/LWM_SportsBrawl_1_1.html
+++ b/Sports Brawl by Lost West Media/LWM_SportsBrawl_1_1.html
@@ -40,7 +40,7 @@
                             <td><input class="sheet-input-center-aligned" type="number" value="0" name="attr_home" /><h3>Home</h3></td>
                         </tr>
                         <tr>
-                        <td><button type="roll" class="sheet-blank-roll-button" value="&{template:score} {{name=SCORE @{home_name}!!!}}" />Score!</td>
+                        <td><button type="roll" class="sheet-blank-roll-button" value="&{template:score} {{name=SCORE!}} {{Result=@{home_name}!!!}}" />Score!</td>
                         </tr>
                     </div>
                         <div class='sheet-col'>
@@ -52,7 +52,7 @@
                                     <td><input class="sheet-input-center-aligned" type="number" value="0" name="attr_away" /><h3>Away</h3></td>
                                 </tr>
                                 <tr>
-                                    <td><button type="roll" class="sheet-blank-roll-button" value="&{template:score} {{name=SCORE @{away_name}!!!}}" />Score!</td>
+                                    <td><button type="roll" class="sheet-blank-roll-button" value="&{template:score} {{name=SCORE!}} {{Result=@{away_name}!!!}}" />Score!</td>
                                 </tr>
                             </table>
                         </div>
